# nnsu-cpp-advanced-multithread_gpu

OpenCL-GPU 7 term/: CMakeLists.txt  readme.md
OpenCL-GPU 7 term/oganyan_lab1/: CMakeLists.txt  first_task.cl  main.cpp
OpenCL-GPU 7 term/oganyan_lab2/: CMakeLists.txt  daxpy.cl  main.cpp  saxpy.cl
OpenCL-GPU 7 term/oganyan_lab3/: CMakeLists.txt  main.cpp  task3.cl
parallel-programming 5-6-term/: readme.md
parallel-programming 5-6-term/not shared memory/pp_2020_autumn_engineer/: .gitignore  README.md
parallel-programming 5-6-term/not shared memory/pp_2020_autumn_engineer/modules/task_1/oganyan_r_letters_amount/: letters_amount.cpp  letters_amount.h  main.cpp
parallel-programming 5-6-term/not shared memory/pp_2020_autumn_engineer/modules/task_2/oganyan_r_writers_readers/: ReadWrite.cpp  ReadWrite.h  main.cpp
parallel-programming 5-6-term/not shared memory/pp_2020_autumn_engineer/modules/task_3/oganyan_r_global_search/: functions.h  global_search.cpp  global_search.h  main.cpp  readme.md
parallel-programming 5-6-term/shared memory/pp_2021_spring_engineers/modules/Visualize/: CMakeLists.txt  visualize.cpp
parallel-programming 5-6-term/shared memory/pp_2021_spring_engineers/modules/task_1/oganyan_r_mark_components/: CMakeLists.txt  Disjoint_Set_Union.h  main.cpp  mark_components_seq.cpp  mark_components_seq.h  mark_components_seq_bfs.cpp  mark_components_seq_bfs.h
parallel-programming 5-6-term/shared memory/pp_2021_spring_engineers/modules/task_2/oganyan_r_mark_components_omp/: CMakeLists.txt  main.cpp  mark_components_omp.cpp  mark_components_omp.h
parallel-programming 5-6-term/shared memory/pp_2021_spring_engineers/modules/task_3/oganyan_r_mark_components_tbb/: CMakeLists.txt  main.cpp  mark_components_tbb.cpp  mark_components_tbb.h
parallel-programming 5-6-term/shared memory/pp_2021_spring_engineers/modules/task_4/oganyan_r_mark_components_std/: CMakeLists.txt  main.cpp  mark_components_std.cpp  mark_components_std.h
parallel-programming 5-6-term/shared memory/pp_2021_spring_engineers/modules/test_tasks/test_mpi/: CMakeLists.txt
parallel-programming 5-6-term/shared memory/pp_2021_spring_reports/: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
parallel-programming 5-6-term/shared memory/pp_2021_spring_reports/.github/workflows/: main.yml
parallel-programming 5-6-term/shared memory/pp_2021_spring_reports/modules/task_1/oganyan_r_mark_components/: CMakeLists.txt  oganyan_r_mark_components.tex
