project("Filter visualsaion")
find_package(OpenCV REQUIRED)
add_executable(Visual visualize.cpp)
target_link_libraries(Visual ${OpenCV_LIBS})
target_link_libraries(Visual ${TBB_LIBRARIES})
add_library(mark_comp ../task_1/oganyan_r_mark_components/mark_components_seq_bfs.h ../task_1/oganyan_r_mark_components/mark_components_seq_bfs.cpp)
add_library(mark_comp1 ../task_1/oganyan_r_mark_components/mark_components_seq.h ../task_1/oganyan_r_mark_components/mark_components_seq.cpp)
add_library(mark_comp2 ../task_2/oganyan_r_mark_components_omp/mark_components_omp.h ../task_2/oganyan_r_mark_components_omp/mark_components_omp.cpp)
add_library(mark_comp3 ../task_3/oganyan_r_mark_components_tbb/mark_components_tbb.h ../task_3/oganyan_r_mark_components_tbb/mark_components_tbb.cpp)
add_library(mark_comp4 ../task_4/oganyan_r_mark_components_std/mark_components_std.h ../task_4/oganyan_r_mark_components_std/mark_components_std.cpp)
target_link_libraries(Visual mark_comp mark_comp1 mark_comp2 mark_comp3 mark_comp4)
message(STATUS "-- " Visualisation)